--- a/Main.html
+++ b/Main.html
@@ -29,7 +29,7 @@
                 </div>
                 <!-- 3Homepage icon -->
                 <div class="button">
-                    <a href="https://github.com/yankmo" target="_blank">
+                    <a href="" target="_blank">
                         <div class="git bord">
                             <div class="icon">
                                 <img
@@ -38,7 +38,7 @@
                         </div>
                     </a>
 
-                    <a href="https://blog.csdn.net/YankMo" target="_blank">
+                    <a href="" target="_blank">
                         <div class="CSDN bord">
                             <div class="icon">
                                 <img
@@ -47,7 +47,7 @@
                         </div>
                     </a>
 
-                    <a href="https://space.bilibili.com/46278923" target="_blank">
+                    <a href="" target="_blank">
                         <div class="Bili bord">
                             <div class="icon">
                                 <img
